--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@ I'm currently working
 <li>My passion is to use technology based solutions, to help solve real world challenges.</li>
 <br>Competences:
 <br>Languages and Frameworks:
-<li>Javascript, HTML5, CSS3, jQuery, Bootstrap3, Angular.js, Meteor.js.</li>
+<li>Javascript, HTML5, CSS3, jQuery, Bootstrap3, express.js, node.js., vue.js, react.</li>
 <br>Tools and expertise:
-<li>Git, Responsive Web Design, Agile Methodologies, Unity5 3D, Photoshop, VR Level Design, and Unity Generalist.</li>
+<li>Git, Responsive Web Design, Photoshop.</li>
 </p>
                 </div>
                 <div class="col-lg-2"></div>
