--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
 </head>
 
 <body>
-    <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
         <div class="container topnav">
-            <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
@@ -23,7 +21,6 @@
                 </button>
                 <a class="navbar-brand topnav" href="#home">Chris Ward</a>
             </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
@@ -40,11 +37,8 @@
                     </li>
                 </ul>
             </div>
-            <!-- /.navbar-collapse -->
         </div>
-        <!-- /.container -->
     </nav>
-    <!-- Header -->
     <a name="home"></a>
     <div class="intro-header">
         <div class="bg-overlay">
@@ -84,13 +78,10 @@
                     </div>
                 </div>
             </div>
-            <!-- /.container -->
         </div>
     </div>
-    <!-- /.intro-header -->
-    <!-- Page Content -->
     <a name="about"></a>
-    <div class="content-section-a">
+    <div class="content-section-2">
         <div class="bg-overlay2">
             <div class="container">
                 <div class="row">
@@ -117,15 +108,13 @@
                     </div>
                     <div class="col-lg-1"></div>
                     <div class="col-lg-5">
-                        <img class="img-circle" src="public/img/profile001.jpg" alt="Chris_Ward_Img">
+                        <img class="img-profile" src="public/img/profile001.jpg" alt="Chris_Ward_Img">
                     </div>
                 </div>
             </div>
-            <!-- /.container -->
         </div>
     </div>
     </div>
-    <!-- Portfolio Grid Section -->
     <a name="portfolio"></a>
     <section id="portfolio" class="bg-light-gray bounds">
         <div class="container">
@@ -134,7 +123,6 @@
                     <p class="section-heading">Portfolio</p>
                 </div>
             </div>
-            <!-- Portfolio 1 -->
             <div class="row">
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="https://wardcj1.github.io/Hangman-Game " target="_blank" class="portfolio-link" data-toggle="modal">
@@ -143,15 +131,13 @@
                                 <i class="fa fa-fire fa-3x"></i>
                             </div>
                         </div>
-                        <img src="public/img/simpsons.jpg" class="img-responsive" alt="The Simpsons">
+                        <img src="public/img/simpsons.png" class="portfolio-img" alt="The Simpsons">
                     </a>
                     <div class="portfolio-caption">
                         <h4>The Simpsons - Hangman Game</h4>
                         <p id="small-text" class="text-muted">Features dynamically updated HTML powered by JavaScript code.</p>
                     </div>
                 </div>
-                <!-- End of Portfolio 1 -->
-                <!-- Portfolio 2 -->
                 <div class="col-md-4 col-sm-6 portfolio-item portfolio2">
                     <a href="https://wardcj1.github.io/trainScheduler" class="portfolio-link" target="_blank" data-toggle="modal">
                         <div class="portfolio-hover">
@@ -159,15 +145,13 @@
                                 <i class="fa fa-fire fa-3x"></i>
                             </div>
                         </div>
-                        <img src="public/img/trainstation.jpg" class="img-responsive" alt="">
+                        <img src="public/img/trainstation.jpg" class="portfolio-img" alt="Train Scheduler">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Train Scheduler</h4>
                         <p id="small-text" class="text-muted">A train schedule application that incorporates Firebase to host arrival and departure data.</p>
                     </div>
                 </div>
-                <!-- End of Portfolio 2 -->
-                <!-- Portfolio 3 -->
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
@@ -175,15 +159,13 @@
                                 <i class="fa fa-fire fa-3x"></i>
                             </div>
                         </div>
-                        <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcRppK4ksGM9VaDEPRzm4l3xjiq9rZ3u00vnRPH3IB8os3qw1WmRnA" class="img-responsive" alt="">
+                        <img src="public/img/agent_bg.png" class="portfolio-img" alt="Secret Agent">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Project 3</h4>
-                        <p id="small-text" class="text-muted">Top Secret</p>
+                        <h4>Secret Agent Decoder</h4>
+                        <p id="small-text" class="text-muted">If you were a secret agent, how would you get a message to your alias and keep the contents hidden from your enemies? Maybe this app could help!</p>
                     </div>
                 </div>
-                <!-- End of Portfolio 3 -->
-                <!-- Portfolio 4 -->
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="https://wardcj1.github.io/week_4_game/" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
@@ -191,15 +173,13 @@
                                 <i class="fa fa-fire fa-3x"></i>
                             </div>
                         </div>
-                        <img src="public/img/crystals.jpg" class="img-responsive" alt="">
+                        <img src="public/img/crystals.jpg" class="portfolio-img" alt="Crystals Collector">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Crystals Collector!</h4>
-                        <p id="small-text" class="text-muted">Win the game by matching your total score to a random number.</p>
+                        <p id="small-text" class="text-muted">Number matching game. Win by matching your total score to a random number. At a new start, the magic crystals change their value.</p>
                     </div>
                 </div>
-                <!-- End of Portfolio 4 -->
-                <!-- Portfolio 5 -->
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="https://wardcj1.github.io/TriviaGame" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
@@ -207,34 +187,30 @@
                                 <i class="fa fa-fire fa-3x"></i>
                             </div>
                         </div>
-                        <img src="public/img/jb007bg.jpg" class="img-responsive" alt="">
+                        <img src="public/img/jb007bg.jpg" class="portfolio-img" alt="James Bond">
                     </a>
                     <div class="portfolio-caption">
                         <h4>James Bond - Trivia</h4>
-                        <p id="small-text" class="text-muted">Trivia game using JavaScript and jQuery.</p>
+                        <p id="small-text" class="text-muted">Trivia game about the (in)famous character and series, James Bond. Tech utilizes JavaScript and jQuery.</p>
                     </div>
                 </div>
-                <!-- End of Portfolio 5 -->
-                <!-- Portfolio 6 -->
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="https://wardcj1.github.io/week-4-game" target="_blank" class="portfolio-link" data-toggle="modal">
+                    <a href="https://wardcj1.github.io/Calculator-Basic/" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-fire fa-3x"></i>
                             </div>
                         </div>
-                        <img src="public/img/worldDomination.jpg" class="img-responsive" alt="World Domination">
+                        <img src="public/img/calc_ss.png" class="portfolio-img" alt="Inventory Manager">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>World Domination Game</h4>
-                        <p id="small-text" class="text-muted">Take over the world!</p>
+                        <h4>Calculator</h4>
+                        <p id="small-text" class="text-muted">A calculator with basic mathematical operations powered by jQuery</p>
                     </div>
                 </div>
-                <!-- End of Portfolio 6 -->
             </div>
         </div>
     </section>
-
     <a name="contact"></a>
     <div class="banner">
         <div class="bg-overlay4">
@@ -257,8 +233,6 @@
         </div>
     </div>
     </div>
-    <!-- /.banner -->
-    <!-- Footer -->
     <footer>
         <div class="container">
             <div class="row">
@@ -280,7 +254,7 @@
                             <a href="#contact">Contact</a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted small">Copyright &copy; </p>
+                    <p class="copyright text-muted small">Copyright &copy; 2017</p>
                 </div>
             </div>
         </div>
