--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                                 <i class="fa fa-fire fa-3x"></i>
                             </div>
                         </div>
-                        <img src="public/img/crystals.jpg" class="portfolio-img" alt="Crystals Collector">
+                        <img src="public/img/gems.png" class="portfolio-img" alt="Crystals Collector">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Crystals Collector!</h4>
