--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 
 <head>
-    <title>Chris Ward - Info</title>
+    <title>Chris Ward</title>
+    <link rel="shortcut icon" href="public/img/cw.jpg">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="public/css/style.css" media="screen" title="no title">
     <script src="https://code.jquery.com/jquery.js"></script>
@@ -46,7 +47,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="intro-message">
-                            <h1>Chris Ward - Info</h1>
+                            <h1>Chris Ward</h1>
                             <hr class="intro-divider">
                             <ul class="list-inline intro-social-buttons">
                                 <li>
@@ -124,7 +125,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4 col-sm-6 portfolio-item">
+                <div class="col-md-6 col-sm-6 portfolio-item">
                     <a href="https://wardcj1.github.io/Hangman-Game " target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -138,22 +139,24 @@
                         <p id="small-text" class="text-muted">Features dynamically updated HTML powered by JavaScript code.</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 portfolio-item portfolio2">
-                    <a href="https://wardcj1.github.io/trainScheduler" class="portfolio-link" target="_blank" data-toggle="modal">
+
+                <div class="col-md-6 col-sm-6 portfolio-item">
+                    <a href="https://wardcj1.github.io/Calculator-Basic/" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-fire fa-3x"></i>
                             </div>
                         </div>
-                        <img src="public/img/trainstation.jpg" class="portfolio-img" alt="Train Scheduler">
+                        <img src="public/img/calc_ss.png" class="portfolio-img" alt="Inventory Manager">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Train Scheduler</h4>
-                        <p id="small-text" class="text-muted">A train schedule application that incorporates Firebase to host arrival and departure data.</p>
+                        <h4>Calculator</h4>
+                        <p id="small-text" class="text-muted">A calculator with basic mathematical operations powered by jQuery</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="" target="_blank" class="portfolio-link" data-toggle="modal">
+
+                <!-- <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="https://github.com/wardcj1/Enigma-v1.git" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-fire fa-3x"></i>
@@ -165,7 +168,8 @@
                         <h4>Secret Agent Decoder</h4>
                         <p id="small-text" class="text-muted">If you were a secret agent, how would you get a message to your alias and keep the contents hidden from your enemies? Maybe this app could help!</p>
                     </div>
-                </div>
+                </div> -->
+                
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="https://wardcj1.github.io/week_4_game/" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
@@ -194,18 +198,18 @@
                         <p id="small-text" class="text-muted">Trivia game about the (in)famous character and series, James Bond. Tech utilizes JavaScript and jQuery.</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="https://wardcj1.github.io/Calculator-Basic/" target="_blank" class="portfolio-link" data-toggle="modal">
+                <div class="col-md-4 col-sm-6 portfolio-item portfolio2">
+                    <a href="https://wardcj1.github.io/trainScheduler" class="portfolio-link" target="_blank" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-fire fa-3x"></i>
                             </div>
                         </div>
-                        <img src="public/img/calc_ss.png" class="portfolio-img" alt="Inventory Manager">
+                        <img src="public/img/trainstation.jpg" class="portfolio-img" alt="Train Scheduler">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Calculator</h4>
-                        <p id="small-text" class="text-muted">A calculator with basic mathematical operations powered by jQuery</p>
+                        <h4>Train Scheduler</h4>
+                        <p id="small-text" class="text-muted">A train schedule application that incorporates Firebase to host arrival and departure data.</p>
                     </div>
                 </div>
             </div>
