--- a/index.html
+++ b/index.html
@@ -51,28 +51,79 @@
                             <hr class="intro-divider">
                             <ul class="list-inline intro-social-buttons">
                                 <li>
-                                    <a href="https://www.linkedin.com/in/hello-chris-ward" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                                    <a href="https://www.linkedin.com/in/hello-chris-ward" target="_blank" class="btn btn-default btn-lg">
+                                    <i class="fa fa-linkedin fa-fw"></i> 
+                                    <span class="network-name">
+                                    <img src="public/img/linkedin_logo.jpg" height="25">
+                                    Linkedin
+                                    </span>
+                                    </a>
                                 </li>
 
                                 <li>
-                                    <a href="https://github.com/wardcj1" target="_blank" class="btn btn-default btn-lg "><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                                    <a href="https://github.com/wardcj1" target="_blank" class="btn btn-default btn-lg ">
+                                    <i class="fa fa-github fa-fw"></i> 
+                                    <span class="network-name">
+                                    <img src="public/img/github_logo.jpg" height="25">
+                                    Github
+                                    </span>
+                                    </a>
                                 </li>
                                 <li>
-                                    <a href="http://stackexchange.com/users/9920424/chris-ward" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-stackOverflow fa-fw"></i> <span class="network-name">StackOverflow</span></a>
+                                    <a href="http://stackexchange.com/users/9920424/chris-ward" target="_blank" class="btn btn-default btn-lg">
+                                    <i class="fa fa-stackOverflow fa-fw"></i> 
+                                    <span class="network-name">
+                                    <img src="public/img/stackex_logo.jpg" height="25">
+                                    StackExchange
+                                    </span>
+                                    </a>
                                 </li>                                
                                 <li>
-                                    <a href="https://twitter.com/thereal_ward" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                                    <a href="https://twitter.com/thereal_ward" target="_blank" class="btn btn-default btn-lg">
+                                    <i class="fa fa-twitter fa-fw"></i> 
+                                    <span class="network-name">
+                                    <img src="public/img/twitter_logo.jpg" height="25">
+                                    Twitter
+                                    </span>
+                                    </a>
                                 </li>
                                 <li>
-                                    <a href="http://www.freecodecamp.com/wardcj1" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-free-code-camp fa-fw"></i> <span class="network-name">freeCodeCamp</span></a>
+                                    <a href="http://www.freecodecamp.com/wardcj1" target="_blank" class="btn btn-default btn-lg">
+                                    <i class="fa fa-free-code-camp fa-fw"></i> 
+                                    <span class="network-name">
+                                    <img src="public/img/freecc_logo.jpg" height="25">
+                                    freeCodeCamp
+                                    </span>
+                                    </a>
                                 </li>
                             </ul>
                             <ul class="list-inline intro-social-buttons">
                                 <li>
-                                    <a href="#portfolio" class="btn btn-default btn-lg"><i class="fa fa-portfolio fa-fw"></i> <span class="network-name">Portfolio</span></a>
+                                    <a href="https://trailhead.salesforce.com/en/users/profiles/00550000006HfHgAAK" target="_blank" class="btn btn-default btn-lg">
+                                    <i class="fa fa-portfolio fa-fw"></i> 
+                                    <span class="network-name">
+                                    <img src="public/img/SFDC_trailhead_logo.jpg" height="25">
+                                    Salesforce Trailhead
+                                    </span>
+                                    </a>
+                                </li> 
+                                <li>
+                                    <a href="#portfolio" class="btn btn-default btn-lg">
+                                    <i class="fa fa-portfolio fa-fw"></i> 
+                                    <span class="network-name">
+                                    <img src="public/img/portfolio_logo.jpg" height="25">
+                                    Portfolio
+                                    </span>
+                                    </a>
                                 </li>                            
                                 <li>
-                                    <a href="#about" class="btn btn-default btn-lg"><i class="fa fa-portfolio fa-fw"></i> <span class="network-name">About Me</span></a>
+                                    <a href="#about" class="btn btn-default btn-lg">
+                                    <i class="fa fa-portfolio fa-fw"></i>
+                                    <span class="network-name">
+                                    <img src="public/img/cw.jpg" height="25">
+                                    About Me
+                                    </span>
+                                    </a>
                                 </li> 
                             </ul>
                         </div>
@@ -87,29 +138,72 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 aboutMe">
-                        <p class="section-heading">About Me</p>
+                        <p class="section-heading aboutMe2">About Me</p>
                         <br>
-                        <p class="aboutMe2">
+                        <p>
                             <li>
-                                Knowledgeable web developer since joining GitHub on August 7, 2016 in HTML, CSS, JavaScript, jQuery, Bootstrap, Responsive Design, Node.js, Handlebars, React.js + Redux, Heroku, User Authentication, MongoDB, MySQL, and Firebase. 
+                                <img src="public/img/SFDC_AdminCert.png" class="SFDC_cert">
+                                Salesforce Certified Administrator with 6+ years implementing CRM solutions and knowledgeable web developer since October 2016 in HTML, CSS, JavaScript, jQuery, Bootstrap, Responsive Design, Node.js, React.js + Redux, Heroku, User Authentication, MongoDB, MySQL, and Firebase. My passion is to use technology based solutions to help solve real world challenges.
                             </li>
                             <hr>
-                            <li>
-                                Completed 24 week web developer coding boot camp at the University of California Los Angeles Extention. 
-                            </li> 
-                            <hr>                           
-                            <li>
+                            <li class="aboutMe2">
                                 Experienced Private Client Associate with a demonstrated history of working in the financial services industry. Additional skills in Asset Management, Retirement Planning, Management, Mutual Funds, and Securities Regulation. Strong finance professional graduated from The University of Texas at Austin.
                             </li>
-                            <hr>
-                            <li>
-                                My passion is to use technology based solutions to help solve real world challenges.
-                            </li>
+                            <br><br>
                         </p>
                     </div>
                     <div class="col-lg-1"></div>
                     <div class="col-lg-5">
-                        <img class="img-profile" src="public/img/profile001.jpg" alt="Chris_Ward_Img">
+                        <center><img class="img-profile" src="public/img/profile001.jpg" alt="Chris_Ward_Img"></center>
+                        <div class="aboutMe">
+                            <p class="section-heading2 aboutMe2">Interests</p>
+                        <br>
+                            <ul class="list-inline intro-social-buttons">
+                                <center>
+                                <li>
+                                    <a href="http://texassports.com/index.aspx?path=football" target="_blank" class="btn btn-default btn-lg">
+                                    <i class="fa fa-portfolio fa-fw"></i> 
+                                    <span class="network-name">
+                                    Texas Longhorn Football 
+                                    <br>   
+                                    <img src="public/img/texas_logo.png" height="50">
+                                    </span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="http://www.imdb.com/list/ls053957647/" target="_blank" class="btn btn-default btn-lg">
+                                    <i class="fa fa-portfolio fa-fw"></i> 
+                                    <span class="network-name">
+                                    1980s Action Movies 
+                                    <br>   
+                                    <img src="public/img/80sAction_logo.jpg" height="50">
+                                    </span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.ibm.com/blockchain/what-is-blockchain.html" target="_blank" class="btn btn-default btn-lg">
+                                    <i class="fa fa-portfolio fa-fw"></i> 
+                                    <span class="network-name">
+                                    Blockchain Technologies 
+                                    <br>   
+                                    <img src="public/img/blockchain_logo.png" height="50">
+                                    </span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="http://www.airguitarworldchampionships.com/" target="_blank" class="btn btn-default btn-lg">
+                                    <i class="fa fa-portfolio fa-fw"></i> 
+                                    <span class="network-name">
+                                    Air Guitar World Championship 
+                                    <br>   
+                                    <img src="public/img/airguitarchamp_logo.jpg" height="50">
+                                    </span>
+                                    </a>
+                                </li>
+                                <br>
+                                </center>
+                            </ul> 
+                        </div>
                     </div>
                 </div>
             </div>
@@ -125,7 +219,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6 col-sm-6 portfolio-item">
+                <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="https://wardcj1.github.io/Hangman-Game " target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -140,7 +234,22 @@
                     </div>
                 </div>
 
-                <div class="col-md-6 col-sm-6 portfolio-item">
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="https://scratch.mit.edu/projects/138036806/" target="_blank" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-fire fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="public/img/batgame_ss.jpg" class="portfolio-img" alt="Bat Game">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Bat Game</h4>
+                        <p id="small-text" class="text-muted">Built on Scratch, a platfom from the MIT Media Lab. A Space Invaders type game with enemy bats instead of aliens and tennis shoes as your weapon.</p>
+                    </div>
+                </div>
+
+                <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="https://wardcj1.github.io/Calculator-Basic/" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -154,21 +263,6 @@
                         <p id="small-text" class="text-muted">A calculator with basic mathematical operations powered by jQuery</p>
                     </div>
                 </div>
-
-                <!-- <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="https://github.com/wardcj1/Enigma-v1.git" target="_blank" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-fire fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="public/img/agent_bg.png" class="portfolio-img" alt="Secret Agent">
-                    </a>
-                    <div class="portfolio-caption">
-                        <h4>Secret Agent Decoder</h4>
-                        <p id="small-text" class="text-muted">If you were a secret agent, how would you get a message to your alias and keep the contents hidden from your enemies? Maybe this app could help!</p>
-                    </div>
-                </div> -->
                 
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="https://wardcj1.github.io/week_4_game/" target="_blank" class="portfolio-link" data-toggle="modal">
