--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Bat Game</h4>
-                        <p id="small-text" class="text-muted">Built on Scratch, a platfom from the MIT Media Lab. A Space Invaders type game with enemy bats instead of aliens and tennis shoes as your weapon.</p>
+                        <p id="small-text" class="text-muted">Built on Scratch, a platform from the MIT Media Lab. A Space Invaders type game with enemy bats instead of aliens and tennis shoes as your weapon.</p>
                     </div>
                 </div>
 
